# Django-Store

./: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
Testing/mysite/myauth/: views.py
mysite/: demo.py  docker-compose.yml  log.txt  orders_A  requirements.txt
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_category_options_alter_article_pub_date.py  0003_alter_article_pub_date.py  0004_alter_article_tags.py
mysite/myapi/: serialized.py  urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py  0004_remove_profile_id_alter_profile_avatar_and_more.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: middlewares.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  exportcasv.csv  forms.py  models.py  serializers.py  sitemap.py  sitemaps.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_product.py  0007_rename_product_order_products.py  0008_alter_product_options_product_created_by.py  0009_alter_product_created_by.py  0010_alter_order_options_alter_product_options_and_more.py
permissions/mysite/myauth/: views.py
(+39 files in other folders)
