[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["Москвин Ангархаев <zn-mosk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "3.15.2"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.6"
pillow = "^10.4.0"
gunicorn = "^22.0.0"
sentry-sdk = "^2.11.0"
drf-spectacular = "^0.27.2"
django-extensions = "^3.2.3"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
